# weaver

./: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md
loader-stub/: .gitignore  Cargo.toml
loader-stub/src/: common.rs  linux.rs  macos.rs  main.rs  windows.rs
src/: config.rs  lib.rs  main.rs  test_utils.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: download.rs  health.rs  merge.rs  merge_stop_on_exit.rs  merge_v2.rs  mod.rs
src/core/: mod.rs  progress.rs
src/core/binary/: mod.rs
src/core/binary/compiler/: mod.rs
src/core/binary/detector/: arch.rs  mod.rs  os.rs
src/core/merger/: linux.rs  linux_stop_on_exit.rs  linux_v2_stop_on_exit.rs  macos.rs  mod.rs  v2.rs  windows.rs
src/models/: binary.rs  mod.rs  request.rs  response.rs
tests/: lib.rs
tests/common/: mod.rs
tests/fixtures/source/: test_base.c  test_base.go  test_base.rs  test_first.c  test_overload.c  test_overload.go  test_overload.rs  test_second.c  test_win.c
tests/integration/: linux_tests.rs  macos_tests.rs  merge_multi_arch.rs  merge_verification.rs  mod.rs  output_verification.rs  windows_tests.rs
tests/unit/: compiler_tests.rs  detection_tests.rs  mod.rs
