[package]
name = "weaver"
version = "0.0.0"
edition = "2021"
authors = ["Krishna Kushwaha"]
description = "Binary weaving service"

[lib]
name = "weaver"
path = "src/lib.rs"

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
goblin = "0.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.8"
base64 = "0.21"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["multipart", "blocking", "json"] }
tokio-test = "0.4"
