[package]
name = "weaver"
version = "0.0.0"
edition = "2024"
authors = ["Krishna Kushwaha"]
description = "Binary weaving service"

[lib]
name = "weaver"
path = "src/lib.rs"

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
actix-web = "4.12"
actix-multipart = "0.7"
actix-files = "0.6"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
goblin = "0.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.23"
base64 = "0.22"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
actix-rt = "2.11"
reqwest = { version = "0.12", features = ["multipart", "blocking", "json"] }
tokio-test = "0.4"
