[package]
name = "loader-stub"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["process", "mman", "signal", "fs", "uio"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.30", features = ["process", "mman", "signal", "fs", "uio"] }
libc = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
